# strata-inference

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bench_compare.sh  bench_compare_cuda.sh  stress_test.sh
benchmarks/: bench.sh  long_prompt.txt  run_context_scaling.sh  run_gen_comparison.sh  run_gen_comparison_cuda.sh  stress_sentences.md  stress_test.sh
benchmarks/docs/: generation_comparison.md
docs/: BENCHMARK_RESULTS.md  MODEL_REGISTRY.md
src/: error.rs  lib.rs
src/backend/: cpu.rs  dl.rs  mod.rs
src/backend/cuda/: ffi.rs  kernels.rs  mod.rs
src/backend/metal/: ffi.rs  kernels.rs  mod.rs
src/cli/: backend.rs  mod.rs  model.rs
src/engine/: embed.rs  exec_metal.rs  generate.rs  graph.rs  mod.rs  sampler.rs
src/gguf/: mod.rs  quant.rs  tensor.rs
src/metal_gen/: engine.rs  exec.rs  graph.rs  mod.rs  pool.rs
src/model/: cache.rs  config.rs  layer.rs  mod.rs  weights.rs
src/registry/: catalog.rs  download.rs  hardware.rs  mod.rs
src/tensor/: mod.rs
src/tokenizer/: bpe.rs  mod.rs  wordpiece.rs
